src/test/ui/issue-17954.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/issue-17954.rs:17:14
   |
17 |     let a = &FOO;
   |              ^^^ does not live long enough
...
24 | } //~ temporary value only lives until here
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

